# lucent-designer

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  App.qml  DesignVibe.desktop  README.md  canvas_items.py  canvas_model.py  canvas_renderer.py  codecov.yaml  commands.py  main.py  main.qml  pyproject.toml  pysidedeploy.spec  requirements-dev.txt
.github/: CONTRIBUTING.md
Components/: InfiniteCanvas.qml  PhIcon.qml  StatusBar.qml  ToolBar.qml
components/: AboutDialog.qml  Canvas.qml  ColorPickerButton.qml  EllipseTool.qml  EllipseToolSettings.qml  ExportDialog.qml  HeaderBar.qml  HitTestHelper.qml  LabeledNumericField.qml  LayerPanel.qml  MenuBar.qml  ObjectPropertiesInspector.qml  OpacitySlider.qml  PaletteBridge.qml  PathEditController.qml  PathEditOverlay.qml  PenTool.qml  PenToolSettings.qml  PhIcon.qml  RectangleTool.qml  RightPanel.qml  Ruler.qml  SelectTool.qml  SelectionManager.qml  SelectionOverlay.qml  StatusBar.qml  Styles.qml  TextTool.qml  TextToolSettings.qml  Theme.qml  Themed.qml  TiledShapesLayer.qml  ToolDefaults.qml  ToolIconButton.qml  ToolPalette.qml  ToolRegistry.qml  ToolSettings.qml  TransformPanel.qml  Viewport.qml  qmldir
scripts/: add_headers.sh  bake_shaders.sh
tests/: conftest.py  test_appearances.py  test_appearances_gpu.py  test_bounding_box.py  test_canvas_contracts.py  test_canvas_items.py  test_canvas_model.py  test_canvas_model_artboards.py  test_canvas_model_basic.py  test_canvas_model_bounds.py  test_canvas_model_coverage.py  test_canvas_model_grouping.py  test_canvas_model_layers.py  test_canvas_model_render.py  test_canvas_model_transforms.py  test_commands.py  (+33 more)
(+69 files in other folders)
