[project]
name = "DesignVibe"

[tool.pyside6-project]
files = ["main.py", "main.qml", "components/Canvas.qml", "components/SelectTool.qml", "components/RectangleTool.qml", "components/ToolSettings.qml", "components/StatusBar.qml", "components/ToolPalette.qml", "components/RightPanel.qml", "components/MenuBar.qml", "components/SelectionManager.qml", "components/ObjectPropertiesInspector.qml"]
