[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lucent"
version = "0.0.0"
description = "Lucent QML app"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

# Required by pyside6-deploy: list project entrypoints and assets.
[tool.pyside6-project]
files = [
    "main.py",
    "App.qml",
    "components/",
    "assets/",
    "pysidedeploy.spec",
    "src/",
]
